tests/baselines/reference/genericCloduleInModule2.errors.txt
genericCloduleInModule2.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
genericCloduleInModule2.ts(8,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
genericCloduleInModule2.ts(9,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
genericCloduleInModule2.ts(14,8): error TS2314: Generic type 'B<T>' requires 1 type argument(s).


==== genericCloduleInModule2.ts (4 errors) ====
    module A {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class B<T> {
            foo() { }
            static bar() { }
        }
    }
    
    module A {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export module B {
                      ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            export var x = 1;
        }
    }
    
    var b: A.B;
           ~~~
!!! error TS2314: Generic type 'B<T>' requires 1 type argument(s).
    b.foo();